Nothing to see here

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,4 +19,5 @@ jobs:
         id: upload
         uses: actions/upload-artifact@v3.1.2
         with:
-          path: debian/artifacts/*
+          name: package
+          path: debian/artifacts
