--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,5 +1,8 @@
 name: 'Lint Code Base'
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches: [ stable, testing ]
 jobs:
   run-lint:
     runs-on: ubuntu-latest
