--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,5 +1,7 @@
 name: 'Build a test package'
-on: [pull_request]
+on:
+  pull_request:
+  push:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -8,16 +10,16 @@ jobs:
     steps:
       - name: 'Check out the repo'
         id: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: 'Build package'
         id: build
-        uses: jtdor/build-deb-action@v1.7.0
+        uses: jtdor/build-deb-action@v1
         with:
           buildpackage-opts: -us -uc
-          docker-image: debian:bullseye-slim
+          docker-image: debian:bookworm-slim
       - name: 'Upload artifacts'
         id: upload
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4
         with:
           name: package
           path: debian/artifacts
